[gd_scene load_steps=34 format=2]

[ext_resource path="res://Assets/starter_player_anim_walk_front_2.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://Assets/starter_player_anim_get_wep.png" type="Texture" id=3]
[ext_resource path="res://Assets/starter_player_anim_walk_front_1.png" type="Texture" id=4]
[ext_resource path="res://Assets/starter_player_anim_walk_back_1.png" type="Texture" id=5]
[ext_resource path="res://Assets/starter_player_anim_walk_1.png" type="Texture" id=6]
[ext_resource path="res://Assets/starter_player_anim_walk_back_2.png" type="Texture" id=7]
[ext_resource path="res://Assets/starter_player_anim_walk_2.png" type="Texture" id=8]
[ext_resource path="res://Assets/Player_weapon_anim/bow_player_back_anim_1.png" type="Texture" id=10]
[ext_resource path="res://Assets/Player_weapon_anim/bow_player_back_anim_2.png" type="Texture" id=11]
[ext_resource path="res://Assets/starter_player_idle_one.png" type="Texture" id=12]
[ext_resource path="res://Assets/Player_weapon_anim/axe_player_back_anim_2.png" type="Texture" id=13]
[ext_resource path="res://Assets/Player_weapon_anim/axe_player_back_anim_1.png" type="Texture" id=14]
[ext_resource path="res://Scripts/Camera.gd" type="Script" id=15]
[ext_resource path="res://Assets/Player_weapon_anim/wand_player_back_anim_1.png" type="Texture" id=16]
[ext_resource path="res://Assets/Player_weapon_anim/wand_player_back_anim_2.png" type="Texture" id=17]
[ext_resource path="res://Assets/Player_weapon_anim/staff_player_anim_walk_back_1.png" type="Texture" id=18]
[ext_resource path="res://Assets/Player_weapon_anim/staff_player_anim_walk_back_2.png" type="Texture" id=19]
[ext_resource path="res://Assets/starter_player_tiles_caster_chest.png" type="Texture" id=20]
[ext_resource path="res://Assets/starter_player_anim_one_caster_chest.png" type="Texture" id=21]
[ext_resource path="res://Assets/starter_player_idle_two.png" type="Texture" id=22]

[sub_resource type="CapsuleShape2D" id=1]
radius = 9.58188
height = 9.99999

[sub_resource type="Animation" id=2]
resource_name = "Idle"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Body:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 2.37841, 3.03144 ),
"update": 1,
"values": [ ExtResource( 12 ), ExtResource( 22 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 0 ), Vector2( 0, -0.5 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Body_Armor:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( 0, -1 ), Vector2( 0, -2 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "axe_back"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Body:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 14 ), ExtResource( 13 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Body:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 10 ), ExtResource( 11 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "fire_back"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Body:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 16 ), ExtResource( 17 ) ]
}

[sub_resource type="Animation" id=6]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Body:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 3 ), ExtResource( 3 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "idle_caster_chest"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Body:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 20 ), ExtResource( 21 ) ]
}

[sub_resource type="Animation" id=8]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Body:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 18 ), ExtResource( 19 ) ]
}

[sub_resource type="Animation" id=9]
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Body:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 3.73213, 1 ),
"update": 1,
"values": [ ExtResource( 5 ), ExtResource( 7 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Weapon:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( 0, -2 ), Vector2( 0, -3 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Body_Armor:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( 0, -1 ), Vector2( 0, -2 ) ]
}

[sub_resource type="Animation" id=10]
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Body:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 4 ), ExtResource( 1 ) ]
}

[sub_resource type="Animation" id=11]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Body:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 2.07053, 4.43828 ),
"update": 1,
"values": [ ExtResource( 6 ), ExtResource( 8 ) ]
}

[sub_resource type="Animation" id=12]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Body:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 16 ), ExtResource( 17 ) ]
}

[node name="Player" type="KinematicBody2D"]
collision_layer = 3
script = ExtResource( 2 )

[node name="Body" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 6 )
region_rect = Rect2( 10.9912, 8.49315, 18.127, 19.4797 )
__meta__ = {
"_editor_description_": "	
				"
}

[node name="Weapon" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -2 )
scale = Vector2( 0.5, 0.5 )

[node name="Body_Armor" type="Sprite" parent="."]
position = Vector2( 0, -1 )
scale = Vector2( 0.5, 0.5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
one_way_collision_margin = 5.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 2 )
anims/axe_back = SubResource( 3 )
anims/bow_back = SubResource( 4 )
anims/fire_back = SubResource( 5 )
anims/get_wep = SubResource( 6 )
anims/idle_caster_chest = SubResource( 7 )
anims/staff_back = SubResource( 8 )
anims/walking_back = SubResource( 9 )
anims/walking_front = SubResource( 10 )
anims/walking_side = SubResource( 11 )
anims/wand_back = SubResource( 12 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.5, 0.5 )
limit_left = -30
limit_top = -30
limit_right = 1124
limit_bottom = 642
script = ExtResource( 15 )

[node name="Camera_Transition" type="Tween" parent="."]

[node name="Position2D" type="Position2D" parent="."]
visible = false
position = Vector2( -5.83478, 0.0595398 )

[node name="invuln_timer" type="Timer" parent="."]

[node name="mana_fill_timer" type="Timer" parent="."]
wait_time = 0.5

[node name="pwr_up_timer" type="Timer" parent="."]

[node name="poison_timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="bleed_timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="freeze_timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="attack_cooldown" type="Timer" parent="."]

[connection signal="timeout" from="invuln_timer" to="." method="_on_invuln_timer_timeout"]
[connection signal="timeout" from="mana_fill_timer" to="." method="_on_mana_fill_timer_timeout"]
[connection signal="timeout" from="pwr_up_timer" to="." method="_on_pwr_up_timer_timeout"]
[connection signal="timeout" from="poison_timer" to="." method="_on_poison_timer_timeout"]
[connection signal="timeout" from="bleed_timer" to="." method="_on_bleed_timer_timeout"]
[connection signal="timeout" from="freeze_timer" to="." method="_on_freeze_timer_timeout"]
[connection signal="timeout" from="attack_cooldown" to="." method="_on_attack_cooldown_timeout"]
